# programming_principals_practice

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .prettierignore  CMakeLists.txt  CMakeSettings.json  readme.md
include/: CSV_parser.h  CSV_simple.h  Calculator.h  Document.h  Error.h  GUI.h  Graph.h  Lines_window.h  Link.h  Mail.h  Matrix.h  MatrixIO.h  Node.h  Order.h  Pool.h  Pool_vector.h  Punct_stream.h  Purchase.h  Simple_window.h  Split.h  Utils.h  Window.h  std_lib_facilities.h
src/: CMakeLists.txt  Chrono.cpp  GUI.cpp  Graph.cpp  Graph.h  Point.h  Simple_window.cpp  Test_output.cpp  To_lower.cpp  Window.cpp  ch10.cpp  ch11.cpp  ch11_ex2.cpp  ch12_drill.cpp  ch12_exercises.cpp  ch13_drill.cpp  ch13_ex.cpp  ch4.cpp  ch5.cpp  ch6.cpp  ch7.cpp  ch8.cpp  ch9.cpp  fib.cpp  fib.h  fltk.h  main.cpp  my.h  reverse.h  std_lib_facilities.h
src/ch10/: CMakeLists.txt  ch10_ex1.cpp
src/ch11/: CMakeLists.txt  ch11_ex1.cpp
src/ch12/: CMakeLists.txt  ch12_drill.cpp
src/ch13/: CMakeLists.txt  ch13_ex.cpp
src/ch14/: CMakeLists.txt  binary_tree.cpp  drill.cpp  ex1.cpp  readme.md
src/ch15/: CMakeLists.txt  drill.cpp  ex1.cpp  ex2.cpp  ex4.cpp  ex5.cpp  readme.md
src/ch16/: CMakeLists.txt  drill.cpp  ex1.cpp  ex2.cpp  ex6.cpp
src/ch17/: CMakeLists.txt  drill.cpp  ex1.cpp  ex11.cpp  ex13.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  readme.md
src/ch18/: CMakeLists.txt  drill.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  readme.md  try_this.cpp
src/ch19/: CMakeLists.txt  drill.cpp  ex1.cpp  ex10.cpp  ex11.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp
src/ch20/: CMakeLists.txt  ch_20_ex2.txt  ch_20_ex2_1.txt  drill.cpp  ex11.cpp  ex12.cpp  ex2.cpp  ex3.cpp  ex5.cpp  ex6.cpp
src/ch21/: CMakeLists.txt  classes.txt  drill.cpp  drill_map.cpp  drill_vector.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex3.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  floats.txt  orders_1.txt  orders_2.txt  review.md  try_this.cpp
src/ch22/: readme.md
src/ch23/: CMakeLists.txt  drill.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex4_5.cpp  ex6.cpp  mail_file_with_errors.txt  mail_file_with_errors_2.txt  table_validator.cpp  try_this.cpp
src/ch24/: CMakeLists.txt  MatrixIO.cpp  drill.cpp  ex1.cpp  ex12.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex4_5.cpp  ex6.cpp  ex7.cpp  try_this.cpp
src/ch25/: CMakeLists.txt  constitution.txt  drill.cpp  ex10_11.cpp  ex14.cpp  ex15.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  review.md  try_this.cpp  usa_dict.txt
src/ch4/: CMakeLists.txt  ch4.cpp
src/ch5/: CMakeLists.txt
src/ch6/: CMakeLists.txt  ch6.cpp
src/ch7/: CMakeLists.txt
src/ch8/: CMakeLists.txt  ch8.cpp  my.cpp  use.cpp
src/ch9/: CMakeLists.txt  Chrono.h  ch9.cpp
