file(GLOB SOURCES CONFIGURE_DEPENDS "*.cpp")

add_subdirectory(ch4)
add_subdirectory(ch5)
add_subdirectory(ch6)
add_subdirectory(ch7)
add_subdirectory(ch8)
add_subdirectory(ch9)
add_subdirectory(ch10)
add_subdirectory(ch11)
add_subdirectory(ch12)
add_subdirectory(ch13)
add_subdirectory(ch14)
add_subdirectory(ch15)
add_subdirectory(ch16)
add_subdirectory(ch17)
add_subdirectory(ch18)
add_subdirectory(ch19)
add_subdirectory(ch20)
add_subdirectory(ch21)
# add_subdirectory(ch22) target skipped for now
add_subdirectory(ch23)