add_executable(ch10_drill drill.cpp)
set_property(TARGET ch10_drill PROPERTY CXX_STANDARD 17)
set_property(TARGET ch10_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch10_ex1 ch10_ex1.cpp)
set_property(TARGET ch10_ex1 PROPERTY CXX_STANDARD 17)
set_property(TARGET ch10_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)