add_executable(ch11_drill drill.cpp)
set_property(TARGET ch11_drill PROPERTY CXX_STANDARD 17)
set_property(TARGET ch11_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch11_ex1 ch11_ex1.cpp)
set_property(TARGET ch11_ex1 PROPERTY CXX_STANDARD 17)
set_property(TARGET ch11_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch11_ex2 ch11_ex2.cpp)
set_property(TARGET ch11_ex2 PROPERTY CXX_STANDARD 17)
set_property(TARGET ch11_ex2 PROPERTY CXX_STANDARD_REQUIRED ON)