add_executable(ch_17_drill drill.cpp)
set_property(TARGET ch_17_drill PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch_17_ex1 ex1.cpp)
set_property(TARGET ch_17_ex1 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)