add_executable(ch_17_drill drill.cpp)
set_property(TARGET ch_17_drill PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch_17_ex1 ex1.cpp)
set_property(TARGET ch_17_ex1 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch_17_ex3 ex3.cpp)
set_property(TARGET ch_17_ex3 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_ex3 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch_17_ex4 ex4.cpp)
set_property(TARGET ch_17_ex4 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_ex4 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch_17_ex5 ex5.cpp)
set_property(TARGET ch_17_ex5 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_ex5 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch_17_ex6 ex6.cpp)
set_property(TARGET ch_17_ex6 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch_17_ex6 PROPERTY CXX_STANDARD_REQUIRED ON)