add_executable(ch18_try_this try_this.cpp)
set_property(TARGET ch18_try_this PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_try_this PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_drill drill.cpp)
set_property(TARGET ch18_drill PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex1 ex1.cpp)
set_property(TARGET ch18_ex1 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex3 ex3.cpp)
set_property(TARGET ch18_ex3 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex3 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex4 ex4.cpp)
set_property(TARGET ch18_ex4 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex4 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex5 ex5.cpp)
set_property(TARGET ch18_ex5 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex5 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex6 ex6.cpp)
set_property(TARGET ch18_ex6 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex6 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex7 ex7.cpp)
set_property(TARGET ch18_ex7 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex7 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex8 ex8.cpp)
set_property(TARGET ch18_ex8 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex8 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex9 ex9.cpp)
set_property(TARGET ch18_ex9 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex9 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex11 ex11.cpp)
set_property(TARGET ch18_ex11 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex11 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch18_ex13 ex13.cpp)
set_property(TARGET ch18_ex13 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch18_ex13 PROPERTY CXX_STANDARD_REQUIRED ON)