add_executable(ch19_try_this try_this.cpp)
set_property(TARGET ch19_try_this PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_try_this PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_drill drill.cpp)
set_property(TARGET ch19_drill PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex1 ex1.cpp)
set_property(TARGET ch19_ex1 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex2 ex2.cpp)
set_property(TARGET ch19_ex2 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex2 PROPERTY CXX_STANDARD_REQUIRED ON)