add_executable(ch19_try_this try_this.cpp)
set_property(TARGET ch19_try_this PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_try_this PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_drill drill.cpp)
set_property(TARGET ch19_drill PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex1 ex1.cpp)
set_property(TARGET ch19_ex1 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex2 ex2.cpp)
set_property(TARGET ch19_ex2 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex2 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex3 ex3.cpp)
set_property(TARGET ch19_ex3 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex3 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex4 ex4.cpp)
set_property(TARGET ch19_ex4 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex4 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex5 ex5.cpp)
set_property(TARGET ch19_ex5 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex5 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex6 ex6.cpp)
set_property(TARGET ch19_ex6 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex6 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex7 ex7.cpp)
set_property(TARGET ch19_ex7 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex7 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex8 ex8.cpp)
set_property(TARGET ch19_ex8 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex8 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch19_ex10 ex10.cpp)
set_property(TARGET ch19_ex10 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch19_ex10 PROPERTY CXX_STANDARD_REQUIRED ON)