add_executable(ch20_try_this try_this.cpp)
set_property(TARGET ch20_try_this PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_try_this PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_drill drill.cpp)
set_property(TARGET ch20_drill PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_ex1 ex1.cpp)
set_property(TARGET ch20_ex1 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_ex2 ex2.cpp)
set_property(TARGET ch20_ex2 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_ex2 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_ex3 ex3.cpp)
set_property(TARGET ch20_ex3 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_ex3 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_ex5 ex5.cpp)
set_property(TARGET ch20_ex5 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_ex5 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_ex6 ex6.cpp)
set_property(TARGET ch20_ex6 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_ex6 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_ex11 ex11.cpp)
set_property(TARGET ch20_ex11 PROPERTY CXX_STANDARD 14)
set_property(TARGET ch20_ex11 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch20_ex12 ex12.cpp)
set_property(TARGET ch20_ex12 PROPERTY CXX_STANDARD 17)
set_property(TARGET ch20_ex12 PROPERTY CXX_STANDARD_REQUIRED ON)