add_executable(ch24_try_this try_this.cpp)
set_property(TARGET ch24_try_this PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_try_this PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_drill drill.cpp Matrix.cpp MatrixIO.cpp)
set_property(TARGET ch24_drill PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex1 ex1.cpp)
set_property(TARGET ch24_ex1 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex1 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex2 ex2.cpp)
set_property(TARGET ch24_ex2 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex2 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex3 ex3.cpp)
set_property(TARGET ch24_ex3 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex3 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex4 ex4.cpp)
set_property(TARGET ch24_ex4 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex4 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex5 ex5.cpp)
set_property(TARGET ch24_ex5 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex5 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex6 ex6.cpp)
set_property(TARGET ch24_ex6 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex6 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex7 ex7.cpp)
set_property(TARGET ch24_ex7 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex7 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex8 ex8.cpp)
set_property(TARGET ch24_ex8 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex8 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex9 ex9.cpp)
set_property(TARGET ch24_ex9 PROPERTY CXX_STANDARD 17)
set_property(TARGET ch24_ex9 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex10 ex10.cpp)
set_property(TARGET ch24_ex10 PROPERTY CXX_STANDARD 17)
set_property(TARGET ch24_ex10 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex11 ex11.cpp)
set_property(TARGET ch24_ex11 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex11 PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch24_ex12 ex12.cpp)
set_property(TARGET ch24_ex12 PROPERTY CXX_STANDARD 20)
set_property(TARGET ch24_ex12 PROPERTY CXX_STANDARD_REQUIRED ON)