add_executable(ch9_drill ch9.cpp)
set_property(TARGET ch9_drill PROPERTY CXX_STANDARD 17)
set_property(TARGET ch9_drill PROPERTY CXX_STANDARD_REQUIRED ON)

add_executable(ch9_Chrono Chrono.cpp)
set_property(TARGET ch9_Chrono PROPERTY CXX_STANDARD 17)
set_property(TARGET ch9_Chrono PROPERTY CXX_STANDARD_REQUIRED ON)